// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalDetailLikersModal /> should render a formatted message when one liker 1`] = `
<Modal
  animation={true}
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h4"
    >
      <FormattedMessage
        id="proposal.likers.count"
        values={
          Object {
            "num": 1,
          }
        }
      />
    </ModalTitle>
  </ModalHeader>
  <ListGroupFlush
    striped={false}
  >
    <ListGroupItem
      bsClass="list-group-item"
      className="bg-vip d-flex text-left"
      key="0"
      listItem={false}
    >
      <Connect(UserAvatar)
        user={
          Object {
            "_links": Object {
              "profile": "www.google.com",
            },
            "media": Object {
              "url": "http://monimage.com/image1.jpg",
            },
            "username": "user1",
          }
        }
      />
      <div
        className="d-flex flex-column justify-content-around"
      >
        <a
          href="www.google.com"
          title="usernames-profile"
        >
          user 1
        </a>
        <p
          className="excerpt"
        >
          Développeuse web - capco
        </p>
      </div>
    </ListGroupItem>
  </ListGroupFlush>
</Modal>
`;

exports[`<ProposalDetailLikersModal /> should render a formatted message when several liker 1`] = `
<Modal
  animation={true}
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h4"
    >
      <FormattedMessage
        id="proposal.likers.count"
        values={
          Object {
            "num": 2,
          }
        }
      />
    </ModalTitle>
  </ModalHeader>
  <ListGroupFlush
    striped={false}
  >
    <ListGroupItem
      bsClass="list-group-item"
      className="bg-vip d-flex text-left"
      key="0"
      listItem={false}
    >
      <Connect(UserAvatar)
        user={
          Object {
            "_links": Object {
              "profile": "www.google.com",
            },
            "media": Object {
              "url": "http://monimage.com/image1.jpg",
            },
            "username": "user1",
          }
        }
      />
      <div
        className="d-flex flex-column justify-content-around"
      >
        <a
          href="www.google.com"
          title="usernames-profile"
        >
          user 1
        </a>
        <p
          className="excerpt"
        >
          Développeuse web - capco
        </p>
      </div>
    </ListGroupItem>
    <ListGroupItem
      bsClass="list-group-item"
      className=" d-flex text-left"
      key="1"
      listItem={false}
    >
      <Connect(UserAvatar)
        user={
          Object {
            "_links": Object {
              "profile": "www.google.com",
            },
            "media": Object {
              "url": "http://monimage.com/image1.jpg",
            },
            "username": "user2",
          }
        }
      />
      <div
        className="d-flex flex-column justify-content-around"
      >
        <a
          href="www.google.com"
          title="usernames-profile"
        >
          user 2
        </a>
        <p
          className="excerpt"
        >
          Développeur web - capco
        </p>
      </div>
    </ListGroupItem>
  </ListGroupFlush>
</Modal>
`;

exports[`<ProposalDetailLikersModal /> should render nothing when no likers 1`] = `""`;
